--- a/jQuery Plugins -Introducing jQuery Plugins/index.html
+++ b/jQuery Plugins -Introducing jQuery Plugins/index.html
@@ -10,7 +10,7 @@
         <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="css/normalize.min.css">
         <!--STEP ONE-->
-        <link rel="stylesheet" href="js/animsition.min.css">
+        <link rel="stylesheet" href="js/animsition/animsition.min.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
@@ -32,7 +32,6 @@
       </header><!--/header-->
         <div class="row">
           <div class="grid-full">
-
           </div>
           <div class="main row">
             <div class="grid-third">
@@ -72,6 +71,6 @@
         <!--STEP THREE-->
         <script src="js/animsition/jquery.animsition.min.js"></script>
         <!--STEP FIVE-->
-        <script src="js/main.js."</script>
+        <script src="js/main.js"></script>
     </body>
 </html>
